# Qt_HomeWork2-1

./: CMakeLists.txt  main.cpp
